yaml-files/catalogue-service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalogue-service
spec:
  selector:
    app: catalogue-service
  ports:
    - port: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalogue-service
  template:
    metadata:
      labels:
        app: catalogue-service
    spec:
      containers:
        - name: catalogue-service
          image: 237548286253.dkr.ecr.us-east-1.amazonaws.com/catalogue-service:latest
          ports:
            - containerPort: 5000
